unpackaged/main/default/objects/Error_Log__c/fields/Daily_Claim__c.field-meta.xml
<CustomField>
    <fullName>Daily_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily Claim</label>
    <referenceTo>Daily_Claim__c</referenceTo>
    <relationshipLabel>Error Log</relationshipLabel>
    <relationshipName>Error_Log</relationshipName>
    <type>Lookup</type>
</CustomField>