unpackaged/main/default/objects/Error_Log__c/fields/Error_Interpretation__c.field-meta.xml
<CustomField>
    <fullName>Error_Interpretation__c</fullName>
    <label>Error Interpretation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>