unpackaged/main/default/objects/Error_Log__c/fields/Historical_Claim__c.field-meta.xml
<CustomField>
    <fullName>Historical_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to related Historical Claim record.</description>
    <label>Historical Claim</label>
    <referenceTo>Historical_Claim__c</referenceTo>
    <relationshipLabel>Error Log</relationshipLabel>
    <relationshipName>Error_Log</relationshipName>
    <type>Lookup</type>
</CustomField>