unpackaged/main/default/objects/Error_Log__c/fields/Historical_Prior_Auth__c.field-meta.xml
<CustomField>
    <fullName>Historical_Prior_Auth__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to related Historical Prior Auth record.</description>
    <label>Historical Prior Auth</label>
    <referenceTo>Historical_Prior_Auth__c</referenceTo>
    <relationshipLabel>Error Log</relationshipLabel>
    <relationshipName>Error_Log</relationshipName>
    <type>Lookup</type>
</CustomField>