unpackaged/main/default/objects/Error_Log__c/fields/Prior_Auth__c.field-meta.xml
<CustomField>
    <fullName>Prior_Auth__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to related Prior Auth record.</description>
    <label>Prior Auth</label>
    <referenceTo>Prior_Auth__c</referenceTo>
    <relationshipLabel>Error Log</relationshipLabel>
    <relationshipName>Error_Log</relationshipName>
    <type>Lookup</type>
</CustomField>