unpackaged/main/default/objects/Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Daily_Claim__c</columns>
    <columns>Error_Message__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>